# stream_api

./: README.md  pyproject.toml  tester.py
watchlist/login/: urls.py  views.py
watchlist/login/templates/: login.html  register.html
watchlist/polls/: models.py  views.py
watchlist/polls/migrations/: 0001_initial.py
watchlist/polls/templates/: login.html
watchlist/polls/templates/base/: base.html
watchlist/sites/: models.py  urls.py  views.py
watchlist/sites/templates/: home.html  login.html  register.html  search.html  topmovies.html  watchlist.html
watchlist/sites/templates/base/: base.html  example.html
watchlist/watchlist/: asgi.py  settings.py  urls.py  views.py  wsgi.py
