[tool.poetry]
name = "stream-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "stream_api"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
prettytable = "^3.8.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
